--- a/src/main/resources/templates/admin/thesis_form.html
+++ b/src/main/resources/templates/admin/thesis_form.html
@@ -66,9 +66,9 @@
               </div>
               <div class="col-md-6">
                 <div class="form-floating">
-                  <input type="text" th:field="*{intern_name}" class="form-control" id="intern_name"
+                  <input type="text" th:field="*{internname}" class="form-control" id="internname"
                          placeholder="Intern Name" required>
-                  <label for="intern_name">Intern Name</label>
+                  <label for="internname">Intern Name</label>
                 </div>
               </div>
               <div class="col-md-6">
