--- a/src/main/resources/templates/admin/thesis_form.html
+++ b/src/main/resources/templates/admin/thesis_form.html
@@ -10,20 +10,29 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa0Yz1rzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
         crossorigin="anonymous">
 
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <style>
+    .form-floating {
+      margin-bottom: 20px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    .card-body {
+      padding: 30px;
+    }
+
+    .breadcrumb-item a {
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
@@ -40,7 +49,7 @@
     <h1>Issue Thesis</h1>
     <nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Thesis</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/bisag/admin/thesis_list}">Thesis</a></li>
         <li class="breadcrumb-item active">Thesis Issue Form</li>
       </ol>
     </nav>
@@ -55,50 +64,60 @@
             <h5 class="card-title">Enter Data</h5>
 
             <!-- Floating Labels Form -->
-            <!-- Floating Labels Form -->
             <form th:action="@{/bisag/admin/thesis/save}" th:object="${thesis}" method="post">
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" th:field="*{title}" class="form-control" id="title"
-                         placeholder="Title" required>
-                  <label for="title">Title</label>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-floating">
+                    <input type="text" th:field="*{title}" class="form-control" id="title"
+                           placeholder="Title" required>
+                    <label for="title">Title</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-floating">
+                    <input type="text" th:field="*{internname}" class="form-control" id="internname"
+                           placeholder="Intern Name" required>
+                    <label for="internname">Intern Name</label>
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" th:field="*{internname}" class="form-control" id="internname"
-                         placeholder="Intern Name" required>
-                  <label for="internname">Intern Name</label>
+
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-floating">
+                    <input type="text" th:field="*{contactNo}" class="form-control" id="contactNo"
+                           placeholder="Contact No" required>
+                    <label for="contactNo">Contact No.</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-floating">
+                    <input type="text" th:field="*{department}" class="form-control" id="department"
+                           placeholder="Department" required>
+                    <label for="department">Department</label>
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" th:field="*{contactNo}" class="form-control" id="contactNo"
-                         placeholder="Contact No" required>
-                  <label for="contactNo">Contact No.</label>
+
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-floating">
+                    <input type="text" th:field="*{purpose}" class="form-control" id="purpose"
+                           placeholder="Purpose" required>
+                    <label for="purpose">Purpose</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="type" class="form-label">Select Type:</label>
+                    <select class="form-select" id="type" th:field="*{type}" required>
+                      <option value="hardcopy" selected>Hard Copy</option>
+                      <option value="softcopy">Soft Copy</option>
+                    </select>
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" th:field="*{department}" class="form-control" id="department"
-                         placeholder="Department" required>
-                  <label for="department">Department</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-floating">
-                  <input type="text" th:field="*{purpose}" class="form-control" id="purpose"
-                         placeholder="Purpose" required>
-                  <label for="purpose">Purpose</label>
-                </div>
-              </div>
-              <div class="form-group col-md-4">
-                <label for="type" class="form-label">Select Type:</label>
-                <select class="form-select" id="type" th:field="*{type}" required>
-                  <option value="hardcopy" selected>Hard Copy</option>
-                  <option value="softcopy">Soft Copy</option>
-                </select>
-              </div>
+
               <div class="form-group row border py-4 shadow mt-4 mx-1">
                 <label for="startDate" class="col-form-label">
                   <h5>Issue Duration:</h5>
@@ -112,7 +131,8 @@
                   <input type="date" th:field="*{returnDate}" id="returnDate" class="form-control">
                 </div>
               </div>
-              <div class="text-center">
+
+              <div class="text-center mt-4">
                 <button type="submit" class="btn btn-primary">
       <span class="spinner-border spinner-border-sm visually-hidden"
             role="status" aria-hidden="true"></span>
@@ -129,37 +149,10 @@
     </div>
   </section>
 
-
   <!-- Include the footer fragment -->
   <div th:replace="fragments/footerFragment :: footer"></div>
 </main>
 <!-- End #main -->
-
-<!-- Include jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-<script>
-  $(document).ready(function() {
-    // Initially hide the loading spinner
-    $('.spinner-border').addClass('visually-hidden');
-
-    $('form').submit(function() {
-      // Show the loading spinner
-      $('.spinner-border').removeClass('visually-hidden');
-
-      // You can also perform additional actions or AJAX requests here
-
-      // For demonstration purposes, let's simulate a delay
-      setTimeout(function() {
-        // After some delay, you may want to reset the loading spinner or perform other actions
-        $('.spinner-border').addClass('visually-hidden');
-      }, 200000); // Simulated delay of 2 seconds (adjust as needed)
-    });
-  });
-</script>
 
 </body>
 
