--- a/src/main/resources/templates/admin/thesis_list.html
+++ b/src/main/resources/templates/admin/thesis_list.html
@@ -99,7 +99,7 @@
     <h1>Manage Thesis</h1>
     <nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Thesis</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/bisag/admin/thesis/new}">Thesis</a></li>
         <li class="breadcrumb-item active">Thesis Management</li>
       </ol>
     </nav>
