--- a/src/main/resources/templates/admin/generate_intern_report.html
+++ b/src/main/resources/templates/admin/generate_intern_report.html
@@ -92,37 +92,44 @@
 							</select>
 							</div>
 							<div class="form-group col-md-4">
-								<label for="intern" class="form-label">Select
-									Intern:</label> <select class="form-select" id="intern" name="intern" required>
-								<option value="All" selected>All</option>
-								<option th:each="intern : ${intern}" th:text="${intern.id}"
-										th:value="${intern.id}"></option>
-							</select>
+								<label for="intern" class="form-label">Select Intern:</label>
+								<select class="form-select" id="intern" name="intern" required>
+									<option value="All" selected>All</option>
+									<option th:each="intern : ${interns}" th:text="${intern.internId}" th:value="${intern.internId}"></option>
+								</select>
 							</div>
 							<div class="form-group col-md-4">
-								<label for="degree" class="form-label">Select
-									Semester:</label> <select class="form-select" id="semester" name="semester" required>
-								<option value="All" selected>All</option>
-								<option th:each="semester : ${semesters}" th:text="${semester.name}"
-										th:value="${semester.name}"></option>
-							</select>
+								<label for="gender" class="form-label">Select Gender:</label>
+								<select class="form-select" id="gender" name="gender" required>
+									<option value="All" selected>All</option>
+									<option th:each="gender : ${genders}" th:text="${gender}" th:value="${gender}"></option>
+								</select>
 							</div>
-							<div class="form-group col-md-4">
-								<label for="degree" class="form-label">Select
-									Percentage:</label> <select class="form-select" id="aggregate_percentage" name="aggregate_percentage" required>
-								<option value="All" selected>All</option>
-								<option th:each="aggregate_percentage : ${aggregate_percentage}" th:text="${aggregate_percentage.name}"
-										th:value="${aggregate_percentage.name}"></option>
-							</select>
-							</div>
-							<div class="form-group col-md-4">
-								<label for="degree" class="form-label">Select
-									Project Definition:</label> <select class="form-select" id="project_definition_name" name="project_definition_name" required>
-								<option value="All" selected>All</option>
-								<option th:each="project_definition_name : ${project_definition_name}" th:text="${project_definition_name.name}"
-										th:value="${project_definition_name.name}"></option>
-							</select>
-							</div>
+							<form th:action="@{/generate_intern_report}" th:object="${internReportForm}" method="post">
+								<div class="form-group col-md-4">
+									<label for="aggregate_percentage" class="form-label">Select Percentage:</label>
+									<input type="range" class="form-range" id="aggregate_percentage" name="aggregatePercentage" min="0" max="100" step="1" value="50" required>
+									<br>
+									<span id="percentage_value">50%</span>
+								</div>
+
+							<script>
+								const rangeInput = document.getElementById("aggregate_percentage");
+								const percentageDisplay = document.getElementById("percentage_value");
+
+								rangeInput.addEventListener("input", function() {
+									percentageDisplay.textContent = rangeInput.value + "%";
+								});
+							</script>
+								<div class="form-group col-md-4">
+									<label for="project_definition_name" class="form-label">Select Project Definition:</label>
+									<select class="form-select" id="project_definition_name" name="project_definition_name" required>
+										<option value="All" selected>All</option>
+										<option th:each="project_definition_name : ${project_definition_name}"
+												th:text="${project_definition_name}"
+												th:value="${project_definition_name}"></option>
+									</select>
+								</div>
 						</div>
 
 						<div class="form-group row border py-4 shadow mt-4 mx-1">
