--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -19,12 +19,12 @@
     <link th:href="@{/assets/css/style.css}" rel="stylesheet"
           type="text/css">
     <style>
-.lgout {
-	padding: 10px;
-	list-style-type: none;
-	border: 2px solid;
-	border-radius: 10px;
-}
+        .lgout {
+            padding: 10px;
+            list-style-type: none;
+            border: 2px solid;
+            border-radius: 10px;
+        }
 
 
     </style>
@@ -54,10 +54,12 @@
                         class="bi bi-circle"></i><span>Intern Applications</span></a></li>
                 <li><a
                         th:href="@{/bisag/admin/intern_application/approved_interns}"><i
-                        class="bi bi-circle"></i><span>Shortlisted Intern
+                    class="bi bi-circle"></i><span>Shortlisted Intern
 							Applications</span></a></li>
                 <li><a th:href="@{/bisag/admin/intern_application/new_interns}"><i
                         class="bi bi-circle"></i><span>Approved Interns</span></a></li>
+                <li><a th:href="@{/bisag/admin/logs}"><i
+                        class="bi bi-circle"></i><span>Rejected Interns</span></a></li>
                 <li><a th:href="@{/bisag/admin/add_fields}"><i
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
@@ -129,6 +131,28 @@
                         <li><a th:href="@{/bisag/admin/admin_pending_final_reports}">
                             <i class="bi bi-circle"></i><span>Final Reports</span>
                         </a></li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="sidebar-nav" id="def-nav">
+                <li class="nav-item">
+                    <a class="nav-link collapsed" data-bs-target="#thesis-nav" data-bs-toggle="collapse" href="#">
+                        <i class="bi bi-menu-button-wide"></i>
+                        <span>Thesis</span>
+                        <i class="bi bi-chevron-down ms-auto"></i>
+                    </a>
+                    <ul id="thesis-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                        <li>
+                            <a th:href="@{/bisag/admin/thesis/new}">
+                                <i class="bi bi-circle"></i><span>Thesis</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/bisag/admin/thesis_list}">
+                                <i class="bi bi-circle"></i><span>Thesis Management</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
