--- a/src/main/resources/templates/intern/intern_dashboard.html
+++ b/src/main/resources/templates/intern/intern_dashboard.html
@@ -156,11 +156,8 @@
                         <div class="tab-pane fade show active profile-overview"
                              id="profile-overview">
                             <h5 class="card-title">About</h5>
-                            <p class="small fst-italic">Sunt est soluta temporibus
-                                accusantium neque nam maiores cumque temporibus. Tempora libero
-                                non est unde veniam est qui dolor. Ut sunt iure rerum quae
-                                quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea
-                                saepe at unde.</p>
+                            <h4><p class="small fst-italic"><span th:text="${intern.firstName}"></span> <span
+                                    th:text="${intern.lastName}"></span></p></h4>
 
                             <h5 class="card-title">Profile Details</h5>
 
