--- a/src/main/resources/templates/admin/admin_pending_def_approvals.html
+++ b/src/main/resources/templates/admin/admin_pending_def_approvals.html
@@ -99,7 +99,7 @@ tr.hover-element th div.dropdown .rounded button.btn-primary:hover {
 			<h1>Pending Project Definitions</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Project
+					<li class="breadcrumb-item"><a href="/bisag/admin/admin_pending_def_approvals">Project
 							Definition</a></li>
 					<li class="breadcrumb-item active">Pending Project Definitions</li>
 				</ol>
