--- a/src/main/resources/templates/admin/generate_intern_report.html
+++ b/src/main/resources/templates/admin/generate_intern_report.html
@@ -23,7 +23,7 @@
 			<h1>Generate Reports</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/admin_dashboard">Home</a></li>
 					<li class="breadcrumb-item active">Generate Reports</li>
 				</ol>
 			</nav>
