--- a/src/main/resources/templates/admin/guide_list.html
+++ b/src/main/resources/templates/admin/guide_list.html
@@ -99,7 +99,7 @@ button {
 			<h1>Manage Guide</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Guide</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/guide_list">Guide</a></li>
 					<li class="breadcrumb-item active">Manage Guide</li>
 				</ol>
 			</nav>
