--- a/src/main/resources/templates/admin/intern_application.html
+++ b/src/main/resources/templates/admin/intern_application.html
@@ -99,7 +99,7 @@ button {
 			<h1>Manage Intern Applications</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Intern</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/intern_application/new_interns">Intern</a></li>
 					<li class="breadcrumb-item active">Intern Applications</li>
 				</ol>
 			</nav>
