--- a/src/main/resources/templates/admin/query_to_guide.html
+++ b/src/main/resources/templates/admin/query_to_guide.html
@@ -102,7 +102,7 @@ iframe {
 			<h1>Queries</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/admin_dashboard">Home</a></li>
 					<li class="breadcrumb-item active">Queries</li>
 				</ol>
 			</nav>
