--- a/src/main/resources/templates/admin/add_fields.html
+++ b/src/main/resources/templates/admin/add_fields.html
@@ -33,7 +33,7 @@
 			<h1>Add Fields</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Intern</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/intern_application/new_interns">Intern</a></li>
 					<li class="breadcrumb-item active">Add Fields</li>
 				</ol>
 			</nav>
