--- a/src/main/resources/templates/admin/new_interns.html
+++ b/src/main/resources/templates/admin/new_interns.html
@@ -125,7 +125,7 @@ button {
 			<h1>Total Interns</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Intern</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/admin/intern_application/new_interns">Intern</a></li>
 					<li class="breadcrumb-item active">Total Interns</li>
 				</ol>
 			</nav>
