--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -60,6 +60,8 @@
                         class="bi bi-circle"></i><span>Approved Interns</span></a></li>
                 <li><a th:href="@{/bisag/admin/logs}"><i
                         class="bi bi-circle"></i><span>Rejected Interns</span></a></li>
+                <a th:href="@{/bisag/admin/activity_logs}"><i
+                    class="bi bi-circle"></i><span>Intern Activity Log</span></a></li>
                 <li><a th:href="@{/bisag/admin/add_fields}"><i
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
