--- a/src/main/resources/templates/fragments/guideHeaderFragment.html
+++ b/src/main/resources/templates/fragments/guideHeaderFragment.html
@@ -3,9 +3,9 @@
 <!-- headerFragment.html -->
 <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
-        <a th:href="@{/bisag/intern/intern_dashboard}"
+        <a th:href="@{/bisag/guide/guide_dashboard}"
            class="logo d-flex align-items-center"> <img
-                th:src="@{/assets/img/bisag_logo.png}" href="@{/bisag/guide/guide_dashboard}" alt=""> <span
+                th:src="@{/assets/img/bisag_logo.png}" href="/bisag/guide/guide_dashboard" alt=""> <span
                 class="d-none d-lg-block">BISAG-N</span>
         </a> <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
