--- a/src/main/resources/templates/guide/guide_dashboard.html
+++ b/src/main/resources/templates/guide/guide_dashboard.html
@@ -49,7 +49,7 @@
 			<h1>Profile</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="/bisag/guide/guide_dashboard">Home</a></li>
 					<li class="breadcrumb-item active">Profile</li>
 				</ol>
 			</nav>
