--- a/src/main/resources/templates/admin/activity_logs.html
+++ b/src/main/resources/templates/admin/activity_logs.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Intern Log Data</title>
+  <title>Activity Log Data</title>
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -96,11 +96,11 @@
 <main id="main" class="main">
 
   <div class="pagetitle">
-    <h1>Intern Log Data</h1>
+    <h1>Activity Log Data</h1>
     <nav>
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/bisag/admin/intern_application/new_interns">Intern</a></li>
-        <li class="breadcrumb-item active">Intern Activity</li>
+        <li class="breadcrumb-item"><a href="/bisag/admin/admin_dashboard">Home</a></li>
+        <li class="breadcrumb-item active">Activity Logs</li>
       </ol>
     </nav>
   </div>
@@ -112,7 +112,7 @@
         <input type="text" class="mb-4" id="searchInput" placeholder="Search...">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Intern Activity Log</h5>
+            <h5 class="card-title">Activity Log Data</h5>
             <!-- Table with stripped rows -->
             <table class="table datatable">
               <thead>
