--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -60,8 +60,6 @@
                         class="bi bi-circle"></i><span>Approved Interns</span></a></li>
                 <li><a th:href="@{/bisag/admin/logs}"><i
                         class="bi bi-circle"></i><span>Rejected Interns</span></a></li>
-                <a th:href="@{/bisag/admin/activity_logs}"><i
-                    class="bi bi-circle"></i><span>Intern Activity Log</span></a></li>
                 <li><a th:href="@{/bisag/admin/add_fields}"><i
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
@@ -153,6 +151,47 @@
                         <li>
                             <a th:href="@{/bisag/admin/thesis_list}">
                                 <i class="bi bi-circle"></i><span>Thesis Management</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+    <ul class="sidebar-nav" id="def-nav">
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#log-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i>
+                <span>Logs</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="log-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                <li>
+                    <a th:href="@{/bisag/admin/activity_logs}">
+                        <i class="bi bi-circle"></i><span>Log Data</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+
+            <ul class="sidebar-nav" id="def-nav">
+                <li class="nav-item">
+                    <a class="nav-link collapsed" data-bs-target="#verification-nav" data-bs-toggle="collapse" href="#">
+                        <i class="bi bi-menu-button-wide"></i>
+                        <span>Verification</span>
+                        <i class="bi bi-chevron-down ms-auto"></i>
+                    </a>
+                    <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                        <li>
+                            <a th:href="@{/bisag/admin/verification_request_form}">
+                                <i class="bi bi-circle"></i><span>Verification Request</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                        <li>
+                            <a th:href="@{/bisag/admin/verification_requests}">
+                                <i class="bi bi-circle"></i><span>Pending Verification</span>
                             </a>
                         </li>
                     </ul>
