--- a/src/main/resources/templates/admin/verification_requests.html
+++ b/src/main/resources/templates/admin/verification_requests.html
@@ -14,6 +14,12 @@
 <main id="main" class="main">
   <div class="pagetitle">
     <h1>Verification Requests</h1>
+    <nav>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a th:href="@{/bisag/admin/verification_request_form}">Verification</a></li>
+        <li class="breadcrumb-item active">Verification Requests</li>
+      </ol>
+    </nav>
   </div>
 
   <section class="section">
