--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -195,6 +195,20 @@
                             </a>
                         </li>
                     </ul>
+                    <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                        <li>
+                            <a th:href="@{/bisag/admin/approved-verifications}">
+                                <i class="bi bi-circle"></i><span>Approved Verification</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
+                        <li>
+                            <a th:href="@{/bisag/admin/rejected-verifications}">
+                                <i class="bi bi-circle"></i><span>Rejected Verification</span>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </li>
