--- a/src/main/resources/templates/admin/attendance.html
+++ b/src/main/resources/templates/admin/attendance.html
@@ -88,7 +88,7 @@
                         <!-- Attendance Table -->
                         <div class="table-responsive">
                             <h5 class="card-title mt-4">Intern Attendance Details</h5>
-                            <table class="table table-responsive">
+                            <table class="table datatable table-bordered">
                                 <thead>
                                 <tr>
                                     <th>Intern ID</th>
