--- a/src/main/resources/templates/admin/thesis_list.html
+++ b/src/main/resources/templates/admin/thesis_list.html
@@ -114,7 +114,7 @@
           <div class="card-body">
             <h5 class="card-title">Thesis Issued</h5>
             <!-- Table with stripped rows -->
-            <table class="table datatable">
+            <table class="table datatable table-bordered">
               <thead>
               <tr>
                 <th><i class="fa-solid fa-sort mx-2"></i>ID</th>
