--- a/src/main/resources/templates/admin/thesis_form.html
+++ b/src/main/resources/templates/admin/thesis_form.html
@@ -111,8 +111,8 @@
                   <div class="form-group">
                     <label for="type" class="form-label">Select Type:</label>
                     <select class="form-select" id="type" th:field="*{type}" required>
-                      <option value="hardcopy" selected>Hard Copy</option>
-                      <option value="softcopy">Soft Copy</option>
+                      <option value="Hardcopy" selected>Hard Copy</option>
+                      <option value="Softcopy">Soft Copy</option>
                     </select>
                   </div>
                 </div>
