--- a/src/main/resources/templates/admin/relieving_records_list.html
+++ b/src/main/resources/templates/admin/relieving_records_list.html
@@ -1,16 +1,100 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interns Relieving Records</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Intern Relieving Records</title>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <style>
+    body {
+      display: block;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+
+    table {
+      width: 60%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+      margin-top: 40px;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    button {
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .button-container {
+      display: inline-block;
+      white-space: nowrap;
+    }
+
+    .button-container form {
+      display: inline-block;
+    }
+
+    #detailsButton {
+      background-color: #2196F3;
+      color: white;
+    }
+
+    #updateButton {
+      background-color: #4caf50;
+      color: white;
+    }
+
+    #deleteButton {
+      background-color: #f44336;
+      color: white;
+    }
+
+    .table th {
+      cursor: pointer;
+      background-image: url('default-icon.png'); /* Default icon image */
+      background-size: 16px 16px; /* Adjust the size of the icon */
+      background-repeat: no-repeat;
+      background-position: right center;
+      /* Position the icon to the right center */
+      padding-right: 20px; /* Add some padding to accommodate the icon */
+    }
+  </style>
 </head>
+
 <body>
+
+<!-- Include the header fragment -->
 <div th:replace="fragments/headerFragment :: header"></div>
+
+<!-- Include the aside fragment -->
 <div th:replace="fragments/asideFragment :: aside"></div>
 
 <main id="main" class="main">
+
   <div class="pagetitle">
     <h1>Relieving Records</h1>
     <nav>
@@ -20,71 +104,160 @@
       </ol>
     </nav>
   </div>
+  <!-- End Page Title -->
 
   <section class="section">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">List of Relieving Records for Interns</h5>
+    <div class="row">
+      <div class="col-lg-12">
+        <input type="text" class="mb-4" id="searchInput" placeholder="Search...">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">List of Relieving Records for Interns</h5>
+            <!-- Table with stripped rows -->
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th>ID</th>
+                <th>Intern ID</th>
+                <th>Institute Name</th>
+                <th>Joining Date</th>
+                <th>Planned Date to Relieve</th>
+                <th>Passwords</th>
+                <th>Media</th>
+                <th>Status of Projects on hand</th>
+                <th>Paths/Folder arrangements for projects handled/Pending</th>
+                <th>Thesis/Hard binding Submission</th>
+                <th>Books</th>
+                <th>Subscription</th>
+                <th>Access Rights Removal</th>
+                <th>Pendrives</th>
+                <th>Unused Cd's</th>
+                <th>Backups of project</th>
+                <th>System/Laptop handover</th>
+                <th>Identity Cards</th>
+                <th>Financial/Stipend Outstanding</th>
+                <th>Briefing of Information Security responsibilities after leaving BISAG-N</th>
+                <th>Weekly Report</th>
+                <th>Attendance</th>
+                <th>Any Others</th>
 
-        <table class="table table-bordered">
-          <thead>
-          <tr>
-            <th>ID</th>
-            <th>Intern ID</th>
-            <th>Institute Name</th>
-            <th>Joining Date</th>
-            <th>Planned Date to Relieve</th>
-            <th>Passwords</th>
-            <th>Media</th>
-            <th>Status of Projects on hand</th>
-            <th>Paths/Folder arrangements for projects handled/Pending</th>
-            <th>Thesis/Hard binding Submission</th>
-            <th>Books</th>
-            <th>Subscription</th>
-            <th>Access Rights Removal</th>
-            <th>Pendrives</th>
-            <th>Unused Cd's</th>
-            <th>Backups of project</th>
-            <th>System/Laptop handover</th>
-            <th>Identity Cards</th>
-            <th>Financial/Stipend Outstanding</th>
-            <th>Briefing of Information Security responsibilities after leaving BISAG-N</th>
-            <th>Weekly Report</th>
-            <th>Attendance</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr th:each="record : ${records}">
+                <td>
+                  <a th:href="@{/bisag/admin/relieving_records_detail/{id}(id=${record.id})}">
+                    <span th:text="${record.id}"></span>
+                  </a>
+                </td>
+                <td th:text="${record.internId}"></td>
+                <td th:text="${record.collegeName}"></td>
+                <td th:text="${record.joiningDate}"></td>
+                <td th:text="${record.plannedDate}"></td>
+                <td th:text="${record.password}"></td>
+                <td th:text="${record.media}"></td>
+                <td th:text="${record.status}"></td>
+                <td th:text="${record.project}"></td>
+                <td th:text="${record.thesis}"></td>
+                <td th:text="${record.books}"></td>
+                <td th:text="${record.subscription}"></td>
+                <td th:text="${record.accessRights}"></td>
+                <td th:text="${record.pendrives}"></td>
+                <td th:text="${record.unusedCd}"></td>
+                <td th:text="${record.backupProject}"></td>
+                <td th:text="${record.system}"></td>
+                <td th:text="${record.identityCards}"></td>
+                <td th:text="${record.stipend}"></td>
+                <td th:text="${record.information}"></td>
+                <td th:text="${record.weeklyReport}"></td>
+                <td th:text="${record.attendance}"></td>
+                <td th:text="${record.others}"></td>
 
-          </tr>
-          </thead>
-          <tbody>
-          <tr th:each="record : ${records}">
-            <td th:text="${record.id}"></td>
-            <td th:text="${record.internId}"></td>
-            <td th:text="${record.collegeName}"></td>
-            <td th:text="${record.joiningDate}"></td>
-            <td th:text="${record.plannedDate}"></td>
-            <td th:text="${record.password}"></td>
-            <td th:text="${record.media}"></td>
-            <td th:text="${record.status}"></td>
-            <td th:text="${record.project}"></td>
-            <td th:text="${record.thesis}"></td>
-            <td th:text="${record.others}"></td>
-            <td th:text="${record.books}"></td>
-            <td th:text="${record.subscription}"></td>
-            <td th:text="${record.accessRights}"></td>
-            <td th:text="${record.unusedCd}"></td>
-            <td th:text="${record.backupProject}"></td>
-            <td th:text="${record.system}"></td>
-            <td th:text="${record.identityCards}"></td>
-            <td th:text="${record.stipend}"></td>
-            <td th:text="${record.information}"></td>
-            <td th:text="${record.weeklyReport}"></td>
-            <td th:text="${record.attendance}"></td>
+              </tr>
+              </tbody>
+            </table>
 
-          </tr>
-          </tbody>
-        </table>
+          </div>
+        </div>
+
       </div>
     </div>
+
   </section>
+
+
+  <!-- Include the footer fragment -->
+  <div th:replace="fragments/footerFragment :: footer"></div>
 </main>
+<!-- End #main -->
+<script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+  $(document)
+          .ready(
+                  function() {
+                    // Add click event listener to table headers for sorting
+                    $('.table th').click(
+                            function() {
+                              var table = $(this).parents('table')
+                                      .eq(0);
+                              var rows = table.find('tr:gt(0)')
+                                      .toArray().sort(
+                                              comparer($(this)
+                                                      .index()));
+                              this.asc = !this.asc;
+                              if (!this.asc) {
+                                rows = rows.reverse();
+                              }
+                              for (var i = 0; i < rows.length; i++) {
+                                table.append(rows[i]);
+                              }
+                            });
+
+                    // Function to compare rows based on the selected column
+                    function comparer(index) {
+                      return function(a, b) {
+                        var valA = getCellValue(a, index), valB = getCellValue(
+                                b, index);
+                        return $.isNumeric(valA)
+                        && $.isNumeric(valB) ? valA - valB
+                                : valA.toString().localeCompare(
+                                        valB);
+                      };
+                    }
+
+                    // Function to get the value of a cell
+                    function getCellValue(row, index) {
+                      return $(row).children('td').eq(index).text();
+                    }
+                  });
+</script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var searchInput = document.getElementById('searchInput');
+    var tableRows = document.querySelectorAll('.table tbody tr');
+
+    searchInput.addEventListener('input', function(event) {
+      var searchText = event.target.value.toLowerCase().trim();
+
+      tableRows.forEach(function(row) {
+        var isVisible = false;
+        row.querySelectorAll('td').forEach(function(cell) {
+          var cellText = cell.textContent.toLowerCase();
+          if (cellText.includes(searchText)) {
+            isVisible = true;
+          }
+        });
+
+        if (isVisible) {
+          row.style.display = '';
+        } else {
+          row.style.display = 'none';
+        }
+      });
+    });
+  });
+</script>
 </body>
+
 </html>
