--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -139,13 +139,13 @@
                 <li class="nav-item">
                     <a class="nav-link collapsed" data-bs-target="#thesis-nav" data-bs-toggle="collapse" href="#">
                         <i class="bi bi-menu-button-wide"></i>
-                        <span>Thesis</span>
+                        <span>Thesis Issue Management</span>
                         <i class="bi bi-chevron-down ms-auto"></i>
                     </a>
                     <ul id="thesis-nav" class="nav-content collapse" data-bs-parent="#def-nav">
                         <li>
                             <a th:href="@{/bisag/admin/thesis/new}">
-                                <i class="bi bi-circle"></i><span>Thesis</span>
+                                <i class="bi bi-circle"></i><span>Thesis Issue</span>
                             </a>
                         </li>
                         <li>
